<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/drawerLayout"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".CancelarActivity"
android:fitsSystemWindows="true"
tools:openDrawer="start"
    >

//contenido de la actividad
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="-182dp" />

    //barra de desplazo
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageMenu"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/icono_menu"
            android:contentDescription="@string/todo" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="330dp"
        android:layout_height="230dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="248dp"
        android:background="@drawable/cancelar"
        app:layout_constraintBottom_toBottomOf="@+id/map"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/nombreConductor_Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quieres_cancelar_el_viaje"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.237" />

        <TextView
            android:id="@+id/costo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/se_cobrar"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nombreConductor_Text"
            app:layout_constraintVertical_bias="0.13" />

        <TextView
            android:id="@+id/costoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_40_mxn"
            android:textStyle="bold"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/costo"
            app:layout_constraintVertical_bias="0.13" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:background="@drawable/boton_confviaje"
            android:stateListAnimator="@null"
            android:text="@string/si"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.172"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.83" />

        <Button
            android:id="@+id/accept_button"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:background="@drawable/boton_canviaje"
            android:stateListAnimator="@null"
            android:text="@string/no"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.828"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.83" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

//menu desplegable
<com.google.android.material.navigation.NavigationView
    android:id="@+id/navigationView"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    app:headerLayout="@layout/header"
    app:menu="@menu/main_menu"
    android:layout_gravity="start"
    >
</com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>